--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Estudio de Abogados - Tu Defensa Legal en Argentina</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" >
   </head>
   <body>
     <header>
@@ -60,7 +60,6 @@
       </section>
 
       <section id="servicios" class="servicios-grid">
-        <section>
           <h2>Nuestro Compromiso</h2>
           <p>
             Nuestro estudio de abogados en Argentina se especializa en ofrecer
@@ -69,8 +68,6 @@
             en diversas áreas del derecho, estamos comprometidos en brindar
             asesoramiento y representación legal de la más alta calidad.
           </p>
-        </section>
-        <section>
           <h2>Nuestra Especialización</h2>
           <p>
             En nuestro estudio, comprendemos la importancia de cada caso y la
@@ -80,8 +77,6 @@
             preparado para ayudarte a enfrentar cualquier situación legal con
             confianza y tranquilidad.
           </p>
-        </section>
-        <section>
           <h2>Nuestra Experiencia</h2>
           <p>
             Con más de una década de experiencia, hemos ayudado a numerosos
@@ -91,7 +86,6 @@
             profesional que nos caracteriza. Confía en nuestro equipo para
             defender tus derechos y obtener los resultados que mereces.
           </p>
-        </section>
       </section>
 
       <section id="contacto">
@@ -106,15 +100,15 @@
             <legend>Información Personal</legend>
             <div>
               <label for="nombre">Nombre:</label>
-              <input type="text" id="nombre" name="nombre" />
+              <input type="text" id="nombre" name="nombre" >
             </div>
             <div>
               <label for="email">Email:</label>
-              <input type="email" id="email" name="email" />
+              <input type="email" id="email" name="email" >
             </div>
             <div>
               <label for="telefono">Teléfono:</label>
-              <input type="tel" id="telefono" name="telefono" />
+              <input type="tel" id="telefono" name="telefono" >
             </div>
             <div>
               <label for="mensaje">Mensaje:</label>
@@ -130,7 +124,7 @@
             </div>
             <div>
               <label for="imagen">Imagen:</label>
-              <input type="file" id="imagen" name="imagen" accept="image/*" />
+              <input type="file" id="imagen" name="imagen" accept="image/*" >
             </div>
           </fieldset>
 
@@ -138,21 +132,21 @@
             <legend>Fuero</legend>
             <div>
               <label
-                ><input type="radio" name="fuero" value="civil" />Civil</label
+                ><input type="radio" name="fuero" value="civil" >Civil</label
               >
               <label
                 ><input
                   type="radio"
                   name="fuero"
                   value="labooral"
-                />Laboral</label
+                >Laboral</label
               >
               <label
                 ><input
                   type="radio"
                   name="fuero"
                   value="comercial"
-                />Comercial</label
+                >Comercial</label
               >
             </div>
           </fieldset>
@@ -160,7 +154,7 @@
           <fieldset>
             <div>
               <label
-                ><input type="checkbox" id="acepto" name="acepto" />Acepto los
+                ><input type="checkbox" id="acepto" name="acepto" >Acepto los
                 términos y condiciones</label
               >
             </div>
